fix too wide items navbar; fix banned mobile card name

--- a/react-frontend/assets/css/style.styl
+++ b/react-frontend/assets/css/style.styl
@@ -310,7 +310,7 @@ button.full-height
   height: 100%
 
 div.toggle-search
-  width: 50px
+  width: 38px
 
 div.gray-font-toggle svg 
   width: 30px
